Ignorar archivos compilados y carpetas del IDE